--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/product_sibling_sequencing_authorization.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/product_sibling_sequencing_authorization.xml
@@ -9,7 +9,7 @@
         <sql><![CDATA[
             CREATE OR REPLACE VIEW readable.product_sibling_sequencing_authorization AS 
 			 SELECT base_table.id, p.name AS parent, sc.name AS status_code, 
-			        base_table.sequence_number, nss.name AS next_sibling, 
+			        base_table.sequence_number, ns.name AS next_sibling, 
 			        nss.name AS next_sibling_status, base_table.notes,
 			        up.name AS updated_by, base_table.update_date
 			   FROM product_sibling_sequencing_authorization base_table
