--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/product_child_sequencing_authorization.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/product_child_sequencing_authorization.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<databaseChangeLog xmlns="http://www.liquibase.org/xml/ns/dbchangelog"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<databaseChangeLog xmlns="http://www.liquibase.org/xml/ns/dbchangelog" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://www.liquibase.org/xml/ns/dbchangelog
-    http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-3.1.xsd">
+    http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-3.1.xsd"
+>
 
     <changeSet id="2.0.0" author="hhildebrand">
-        <sql><![CDATA[
-            CREATE OR REPLACE VIEW readable.product_child_sequencing_authorization AS 
+        <createView viewName="product_child_sequencing_authorization" schemaName="readable" replaceIfExists="true"><![CDATA[
 			 SELECT base_table.id, p.name AS parent, sc.name AS status_code, 
 			        base_table.sequence_number, nc.name AS next_child, 
 			        ncs.name AS next_child_status, base_table.notes, 
@@ -18,14 +17,8 @@
 			   LEFT JOIN product nc ON base_table.next_child = nc.id
 			   LEFT JOIN status_code ncs ON base_table.next_child_status = ncs.id
 			   JOIN agency up ON base_table.updated_by = up.id;
-			
-			ALTER TABLE readable.product_child_sequencing_authorization
-			  OWNER TO core;
-			GRANT ALL ON TABLE readable.product_child_sequencing_authorization TO core;
-			GRANT SELECT ON TABLE readable.product_child_sequencing_authorization TO core_read_write;
-			GRANT SELECT ON TABLE readable.product_child_sequencing_authorization TO core_read_only;
             ]]>
-        </sql>
+        </createView>
         <rollback>
             <dropView viewName="readable.product_child_sequencing_authorization" />
         </rollback>
