--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/status_code_sequencing.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/status_code_sequencing.xml
@@ -1,27 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<databaseChangeLog xmlns="http://www.liquibase.org/xml/ns/dbchangelog"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<databaseChangeLog xmlns="http://www.liquibase.org/xml/ns/dbchangelog" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://www.liquibase.org/xml/ns/dbchangelog
-    http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-3.1.xsd">
+    http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-3.1.xsd"
+>
 
     <changeSet id="2.0.0" author="hhildebrand">
-        <sql><![CDATA[
-            CREATE OR REPLACE VIEW readable.status_code_sequencing AS 
+        <createView schemaName="readable" viewName="status_code_sequencing" replaceIfExists="true"><![CDATA[ 
 			 SELECT base_table.id, s.name AS service, pc.name AS parent_code, cc.name AS child_code, base_table.notes, up.name AS updated_by, base_table.version
 			   FROM status_code_sequencing base_table
 			   JOIN product s ON base_table.service = s.id
 			   JOIN status_code pc ON base_table.parent_code = pc.id
 			   JOIN status_code cc ON base_table.child_code = cc.id
-			   JOIN agency up ON base_table.updated_by = up.id;
-			
-			ALTER TABLE readable.status_code_sequencing
-			  OWNER TO core;
-			GRANT ALL ON TABLE readable.status_code_sequencing TO core;
-			GRANT SELECT ON TABLE readable.status_code_sequencing TO core_read_write;
-			GRANT SELECT ON TABLE readable.status_code_sequencing TO core_read_only;
+			   JOIN agency up ON base_table.updated_by = up.id
             ]]>
-        </sql>
+        </createView>
         <rollback>
             <dropView viewName="readable.status_code_sequencing" />
         </rollback>
