--- a/model/sql/com/chiralbehaviors/CoRE/schema/readable/views/product_self_sequencing_authorization.xml
+++ b/model/sql/com/chiralbehaviors/CoRE/schema/readable/views/product_self_sequencing_authorization.xml
@@ -7,19 +7,15 @@
 
     <changeSet id="2.0.0" author="hhildebrand">
         <createView schemaName="readable" viewName="product_self_sequencing_authorization" replaceIfExists="true"><![CDATA[ 
-           SELECT base_table.id, s.name AS service, sc.name AS status_code, 
+           SELECT w.name AS workspace, base_table.id, s.name AS service, sc.name AS status_code, 
                     base_table.sequence_number, base_table.notes,
                     up.name AS updated_by, base_table.version
                FROM product_self_sequencing_authorization base_table
                JOIN product s ON base_table.service = s.id
                JOIN status_code sc ON base_table.status_code = sc.id
-               JOIN agency up ON base_table.updated_by = up.id;
-            
-            ALTER TABLE readable.product_self_sequencing_authorization
-              OWNER TO core;
-            GRANT ALL ON TABLE readable.product_self_sequencing_authorization TO core;
-            GRANT SELECT ON TABLE readable.product_self_sequencing_authorization TO core_read_write;
-            GRANT SELECT ON TABLE readable.product_self_sequencing_authorization TO core_read_only;
+               JOIN agency up ON base_table.updated_by = up.id
+             LEFT JOIN ruleform.workspace_authorization wa ON base_table.workspace = wa.id
+             LEFT JOIN ruleform.product w ON wa.defining_product = w.id
             ]]></createView>
         <rollback>
             <dropView schemaName="readable" viewName="product_self_sequencing_authorization" />
