--- a/model/sql/com/chiralbehaviors/CoRE/schema/readable/views/status_code_sequencing.xml
+++ b/model/sql/com/chiralbehaviors/CoRE/schema/readable/views/status_code_sequencing.xml
@@ -7,12 +7,16 @@
 
     <changeSet id="2.0.0" author="hhildebrand">
         <createView schemaName="readable" viewName="status_code_sequencing" replaceIfExists="true"><![CDATA[ 
-			 SELECT base_table.id, s.name AS service, pc.name AS parent_code, cc.name AS child_code, base_table.notes, up.name AS updated_by, base_table.version
+			 SELECT 
+                w.name AS workspace,
+                 base_table.id, s.name AS service, pc.name AS parent_code, cc.name AS child_code, base_table.notes, up.name AS updated_by, base_table.version
 			   FROM status_code_sequencing base_table
 			   JOIN product s ON base_table.service = s.id
 			   JOIN status_code pc ON base_table.parent_code = pc.id
 			   JOIN status_code cc ON base_table.child_code = cc.id
 			   JOIN agency up ON base_table.updated_by = up.id
+             LEFT JOIN ruleform.workspace_authorization wa ON base_table.workspace = wa.id
+             LEFT JOIN ruleform.product w ON wa.defining_product = w.id
             ]]>
         </createView>
         <rollback>
