--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/product_child_sequencing_authorization.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/product_child_sequencing_authorization.xml
@@ -9,6 +9,8 @@
         <createView viewName="product_child_sequencing_authorization" schemaName="readable" replaceIfExists="true"><![CDATA[
 			 SELECT 
                 w.name AS workspace,
+                wa.key AS wsp_key,
+                wa.description AS wsp_desc,
                  base_table.id, p.name AS parent, sc.name AS status_code, 
 			        base_table.sequence_number, nc.name AS next_child, 
 			        ncs.name AS next_child_status, base_table.notes, 
