--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/product_sibling_sequencing_authorization.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/product_sibling_sequencing_authorization.xml
@@ -7,10 +7,19 @@
 
     <changeSet id="2.0.0" author="hhildebrand">
         <createView schemaName="readable" viewName="product_sibling_sequencing_authorization" replaceIfExists="true"><![CDATA[ 
-			 SELECT w.name AS workspace, base_table.id, p.name AS parent, sc.name AS status_code, 
-			        base_table.sequence_number, ns.name AS next_sibling, 
-			        nss.name AS next_sibling_status, base_table.notes,
-			        up.name AS updated_by, base_table.version
+			 SELECT 
+                w.name AS workspace, 
+                wa.key AS wsp_key,
+                wa.description AS wsp_desc,
+                base_table.id, 
+                p.name AS parent, 
+                sc.name AS status_code, 
+			    base_table.sequence_number, 
+                ns.name AS next_sibling, 
+			    nss.name AS next_sibling_status, 
+                base_table.notes,
+			    up.name AS updated_by, 
+                base_table.version
 			   FROM product_sibling_sequencing_authorization base_table
 			   JOIN product p ON base_table.parent = p.id
 			   JOIN status_code sc ON base_table.status_code = sc.id
