--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/child_sequencing_authorization.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/child_sequencing_authorization.xml
@@ -6,22 +6,25 @@
 >
 
     <changeSet id="2.0.0" author="hhildebrand">
-        <createView schemaName="readable" viewName="status_code_sequencing" replaceIfExists="true"><![CDATA[ 
+        <createView viewName="child_sequencing_authorization" schemaName="readable" replaceIfExists="true"><![CDATA[
 			 SELECT 
                 w.name AS workspace,
                 wa.key AS wsp_key,
                 wa.description AS wsp_desc,
                 base_table.id, 
-                s.name AS service, 
-                pc.name AS parent, 
-                cc.name AS child, 
+                p.name AS parent, 
+                sc.name AS status_code, 
+		        base_table.sequence_number, 
+                nc.name AS next_child, 
+		        ncs.name AS next_child_status, 
                 base_table.notes, 
-                up.name AS updated_by, 
+		        up.name AS updated_by, 
                 base_table.version
-			   FROM status_code_sequencing base_table
-			   JOIN existential s ON base_table.service = s.id
-			   JOIN existential pc ON base_table.parent = pc.id
-			   JOIN existential cc ON base_table.child = cc.id
+			   FROM child_sequencing_authorization base_table
+			   JOIN existential p ON base_table.parent = p.id
+			   JOIN existential sc ON base_table.status_code = sc.id
+			   LEFT JOIN existential nc ON base_table.next_child = nc.id
+			   LEFT JOIN existential ncs ON base_table.next_child_status = ncs.id
 			   JOIN existential up ON base_table.updated_by = up.id
              LEFT JOIN workspace_authorization wa ON base_table.workspace = wa.id
              LEFT JOIN existential w ON wa.defining_product = w.id
