--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/sibling_sequencing_authorization.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/sibling_sequencing_authorization.xml
@@ -9,7 +9,7 @@
         <createView schemaName="readable" viewName="sibling_sequencing_authorization" replaceIfExists="true"><![CDATA[ 
 			 SELECT 
                 base_table.id, 
-                p.name AS parent, 
+                s.name AS service, 
                 sc.name AS status_code, 
 			    base_table.sequence_number, 
                 ns.name AS next_sibling, 
@@ -20,12 +20,12 @@
                 wa.key AS wsp_key,
                 wa.description AS wsp_desc,
                 base_table.version
-			   FROM sibling_sequencing_authorization base_table
-			   JOIN existential p ON base_table.parent = p.id
-			   JOIN existential sc ON base_table.status_code = sc.id
-			   LEFT JOIN existential ns ON base_table.next_sibling = ns.id
-			   LEFT JOIN existential nss ON base_table.next_sibling_status = nss.id
-			   JOIN existential up ON base_table.updated_by = up.id
+			 FROM sibling_sequencing_authorization base_table
+			 JOIN existential s ON base_table.service = s.id
+			 JOIN existential sc ON base_table.status_code = sc.id
+			 LEFT JOIN existential ns ON base_table.next_sibling = ns.id
+			 LEFT JOIN existential nss ON base_table.next_sibling_status = nss.id
+			 JOIN existential up ON base_table.updated_by = up.id
              LEFT JOIN workspace_authorization wa ON base_table.workspace = wa.id
              LEFT JOIN existential w ON wa.defining_product = w.id
             ]]>
