--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/self_sequencing_authorization.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/self_sequencing_authorization.xml
@@ -22,8 +22,8 @@
                JOIN existential s ON base_table.service = s.id
                JOIN existential sc ON base_table.status_code = sc.id
                JOIN existential up ON base_table.updated_by = up.id
-             LEFT JOIN workspace_authorization wa ON base_table.workspace = wa.id
-             LEFT JOIN existential w ON wa.defining_product = w.id
+             LEFT JOIN existential w ON base_table.workspace = w.id
+             LEFT JOIN workspace_label wa ON wa.workspace = w.id AND wa.reference = base_table.id
             ]]></createView>
     </changeSet>
 </databaseChangeLog>
