--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/status_code_sequencing.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/status_code_sequencing.xml
@@ -23,8 +23,8 @@
 			   JOIN existential pc ON base_table.parent = pc.id
 			   JOIN existential cc ON base_table.child = cc.id
 			   JOIN existential up ON base_table.updated_by = up.id
-             LEFT JOIN existential w ON base_table.workspace = w.id
-             LEFT JOIN workspace_label wa ON wa.workspace = w.id AND wa.reference = base_table.id
+             LEFT JOIN workspace_label wa ON wa.reference = base_table.id
+             LEFT JOIN existential w ON wa.workspace = w.id
             ]]>
         </createView>
     </changeSet>
