--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/parent_sequencing_authorization.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/parent_sequencing_authorization.xml
@@ -27,8 +27,8 @@
 			   LEFT JOIN existential mp ON base_table.parent = mp.id
 			   LEFT JOIN existential mps ON base_table.parent_status_to_set = mps.id
 			   JOIN existential up ON base_table.updated_by = up.id
-             LEFT JOIN existential w ON base_table.workspace = w.id
-             LEFT JOIN workspace_label wa ON wa.workspace = w.id AND wa.reference = base_table.id
+             LEFT JOIN workspace_label wa ON wa.reference = base_table.id
+             LEFT JOIN existential w ON wa.workspace = w.id
             ]]>
         </createView>
     </changeSet>
